--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ astunparse==1.6.3
 async-lru==2.0.5
 attrs==25.3.0
 babel==2.17.0
+bcrypt==4.3.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
 cachetools==5.5.2
@@ -23,6 +24,8 @@ cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
+dnspython==2.7.0
+email_validator==2.2.0
 executing==2.2.0
 fastapi==0.115.12
 fastjsonschema==2.21.1
