--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ babel==2.17.0
 bcrypt==4.3.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
+CacheControl==0.14.2
 cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
@@ -20,30 +21,39 @@ charset-normalizer==3.4.1
 click==8.1.8
 comm==0.2.2
 contourpy==1.3.2
+cryptography==44.0.2
 cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
 dnspython==2.7.0
+ecdsa==0.19.1
 email_validator==2.2.0
 executing==2.2.0
 fastapi==0.115.12
 fastjsonschema==2.21.1
+firebase-admin==6.7.0
 flatbuffers==25.2.10
 fonttools==4.57.0
 fqdn==1.5.1
 gast==0.6.0
 google-api-core==2.24.2
+google-api-python-client==2.167.0
 google-auth==2.39.0
+google-auth-httplib2==0.2.0
 google-cloud-core==2.4.3
 google-cloud-firestore==2.20.2
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
 google-pasta==0.2.0
+google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 grpcio==1.71.0
 grpcio-status==1.71.0
 h11==0.14.0
 h5py==3.13.0
 httpcore==1.0.8
+httplib2==0.22.0
 httpx==0.28.1
 idna==3.10
 ipykernel==6.29.5
@@ -81,6 +91,7 @@ matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.1.3
 ml_dtypes==0.5.1
+msgpack==1.1.0
 namex==0.0.8
 nbclient==0.10.2
 nbconvert==7.16.6
@@ -114,9 +125,11 @@ pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
 Pygments==2.19.1
+PyJWT==2.10.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-jose==3.4.0
 python-json-logger==3.3.0
 pytz==2025.2
 PyYAML==6.0.2
@@ -152,6 +165,7 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 uri-template==1.3.0
+uritemplate==4.1.1
 urllib3==2.4.0
 uvicorn==0.34.1
 wcwidth==0.2.13
