--- a/requirements.txt
+++ b/requirements.txt
@@ -119,8 +119,8 @@ protobuf==5.29.4
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pyasn1==0.4.8
-pyasn1_modules==0.4.2
+pyasn1
+pyasn1_modules
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
