--- a/requirements.txt
+++ b/requirements.txt
@@ -119,8 +119,8 @@ protobuf==5.29.4
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pyasn1
-pyasn1_modules
+pyasn1==0.4.8
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
@@ -131,6 +131,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-jose==3.4.0
 python-json-logger==3.3.0
+python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
 pyzmq==26.4.0
